img-wrapp fix

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -85,7 +85,8 @@
 }
 
 .photo-card {
-  border: 3px solid blue;
+  position: relative;
+  border: 3px solid #0000ff;
   border-radius: 5px;
   width: 250px;
   height: 300px;
@@ -133,7 +134,7 @@
   border-radius: 15px;
   padding: 10px;
   h2 {
-    color: red;
+    color: #ff0000;
     text-align: center;
     font-weight: 600;
   }
@@ -233,4 +234,18 @@
 }
 .page-navigation__left-arrow {
   transform: rotate(-135deg);
+}
+
+@layer utilities {
+  .loader {
+    @apply relative w-16 h-16 rounded-full animate-spin;
+    border-top-color: #ff0000;
+    border-right-color: transparent;
+    border-bottom-color: #0000ff;
+    border-left-color: transparent;
+    border-width: 4px;
+    border-style: solid;
+    position: absolute;
+    bottom: 50px;
+  }
 }
